--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
     --bg-color:#121212;
     --text-color:#f5f5f5;
     --hover-bg:#333333;
-    
+
 
 
 }
@@ -19,7 +19,9 @@ body{
     color:var(--text-color);
     transition: background-color 0.3s,color 0.3s;
     font-family: sans-serif;
-    padding: 20px;
+    padding: 0.5%;
+    margin:0%;
+
 }
 
 button{
@@ -50,6 +52,9 @@ button{
   flex: 1;
 }
 
+
+
+
 .segmented button.active {
   background: var(--text-color);   /* active color */
   color: var(--bg-color);
@@ -60,13 +65,75 @@ button{
   color: var(--text-color);
 }
 
-.top_bar{
-    display:flex;
-    justify-content: space-between;
+.top_bar {
+    display: flex;
     align-items: center;
-    padding: 10px 20px;
-    
+    width: 100%;
+    height: 48px;
+    padding: 0 1%;
+    box-sizing: border-box;
 }
+
+/* LEFT SIDE */
+.left_items {
+    display: flex;
+    gap: 8px;
+    flex-shrink: 0;
+}
+
+/* THIS IS THE SPACE-TIME IN BETWEEN */
+.spacer {
+    flex: 1;
+}
+
+/* RIGHT SIDE */
+.right_items {
+    display: flex;
+    gap: 2px;
+    flex-shrink: 0;
+}
+
+/* BUTTON */
+#move-to-brain {
+    display: flex;
+    border-radius: 20px;
+    border: 0;
+    background-color: var(--text-color);
+    color: var(--bg-color);
+    padding: 2px 10px;
+    white-space: nowrap;
+    width:44px;
+    overflow: hidden;
+    align-items: center;
+    transition: width 0.25s ease;
+}
+
+#move-to-brain:hover{
+    width:140px;
+    align-items: center;
+}
+
+#move-to-brain .hover-text{
+    white-space: nowrap;
+    height: 100%;
+    margin-left: 0;
+    max-width: 0;
+    opacity: 1;
+    padding-top: 25px;
+    overflow: hidden;
+    transition: 
+        max-width 0.25s ease,
+        margin-left 0.25s ease,
+        opacity 0.2s ease;
+}
+
+#move-to-brain:hover .hover-text{
+    max-width: 120px;
+    margin-left: 8px;
+    opacity: 1;
+}
+
+
 
 /* PANEL CONTAINER */
 #chatbot-panel {
@@ -161,9 +228,17 @@ button{
 }
 
 #theme-toggle{
+    display: flex;
+    align-items: center;
     border-width: 0cap;
     background-color: #00000000;
+    padding-left: 1%;
+    justify-content: center;
+    
 }
+
+
+
 #panel-toggle{
     border-width: 0cap;
     background-color: #00000000;
