--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
     --bg-color:#ffffff;
     --text-color:#333333;
     --hover-bg:#eeeeee;
+    --img-color:invert(100%);
    
 }
 
@@ -9,12 +10,12 @@
     --bg-color:#121212;
     --text-color:#f5f5f5;
     --hover-bg:#333333;
-
+    --img-color:invert(0%);
 
 
 }
 html,body{
-    height:100%
+    height:100%;
 }
 body{
     background-color: var(--bg-color);
@@ -24,6 +25,7 @@ body{
     padding: 0.5%;
     margin:0;
     height:100%;
+    
     
 
 }
@@ -220,7 +222,7 @@ button{
 
 
 #eeg-panel{
-    height: 300px;
+    height: 200px;
     width: 100%;
     display:block;
 }
@@ -261,20 +263,22 @@ button{
     position: relative;
     width:100%;
     height: 100%;
+    align-items: flex-start;
    
 }
 
 .main-content-container {
     position: absolute;
-    width: 0%;
+    
     height: 100%;
     top: 0;
     left: 0;
 
     transform: translateX(100%);
     opacity: 0;
+    width:0%;
 
-    transition: transform 0.4s ease, opacity 0.4s ease;
+    transition: transform 0.4s ease, opacity 0.4s ease,width 0.2s;
 }
 
 .main-content-container.active {
@@ -298,7 +302,37 @@ button{
 }
 
 .main-content-table td{
-    border: 2px solid #000;
-    
+    border: 2px solid #8e8e8e;
+    border-radius: 10px;
+    padding: 5px;
+    padding-left: 5px;
     
 }
+
+
+.notfound{
+    background-color: #8e8e8e5c;
+    background-image:url("../Icons/not-found-background.png");
+    background-size: cover;
+    filter:var(--img-color);
+    background-repeat: no-repeat;
+    align-content:space-around;
+    width: 100%;
+    height:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+
+}
+ 
+.notfound p{
+    color: #fff;
+}
+
+
+
+
+
+
+
